--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="onehalfimg" class="col-12">
             <div class="a" class="col-6">
-                <img src="images.jpeg" style="width:55%;height:60%;
+                <img src="/images.jpeg" style="width:55%;height:60%;
           margin-left:50%;
           margin-top:30%;
           z-index:1;
