--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
             <div class="b" class="col-6">
-                <img src="2images.jpeg" style="margin-bottom:30%;
+                <img src="architecture_project/2images.jpeg" style="margin-bottom:30%;
     height:55%;
     width:55%;
     margin-top:10%;
